fix: #67 remove extra space in the description.

--- a/react-basic-practice/src/pages/ProductDetail/index.css
+++ b/react-basic-practice/src/pages/ProductDetail/index.css
@@ -1,6 +1,5 @@
 .product-main {
   padding-top: 128px;
-  padding-bottom: 900px;
 }
 
 .product {
@@ -50,7 +49,6 @@
 
 .product-description {
   margin-top: 123px;
-  margin-bottom: 200px;
 }
 
 .product-description .title {
